# plugin-codeforge

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ESCALATION-PROMPT.md  Explore-verify-output.md  PMOAgent-2nd-pass-output.yaml  README.md  RESUME-NOTICE-2026-05-20.md  adr-reservation-claim-state.json  mark.toml  pyproject.toml  requirements.txt  start_collector.sh
.claude/: settings.json  settings.local.json
.claude-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.tmp-cfp1107/: deputy-mandate-update-plan.md  epic-body.md  s1-body.md  s2-body.md  s3-body.md  s4-body.md  s5-body.md  s6-body.md  spec-backup.md
agents/: APIContractArchitectAgent.md  AggregateArchitectAgent.md  ArchitectAgent.md  ArchitectAnalystAgent.md  ArchitectPLAgent.md  BackendDeveloperAgent.md  ChangeImpactAgent.md  ClaudeCodeReviewAgent.md  ClaudeDesignReviewAgent.md  ClaudeReviewAgent.md  ClaudeSecurityTestAgent.md  CodeArchitectAgent.md  CodeReviewPLAgent.md  CodebaseMapperAgent.md  CodexCodeReviewAgent.md  CodexDesignReviewAgent.md  CodexReviewAgent.md  CodexSecurityTestAgent.md  ContinuityAgent.md  DataArchitectAgent.md  DataEngineerAgent.md  DataMigrationArchitectAgent.md  DeployPLAgent.md  DeployReviewPLAgent.md  DeployReviewWorkerAgent.md  DeployWorkerAgent.md  DesignReviewPLAgent.md  DeveloperAgent.md  DeveloperPLAgent.md  DialogFidelityAgent.md  DocsAgent.md  DomainAgent.md  FeasibilityAgent.md  FrontendDeveloperAgent.md  GitOpsAgent.md  InfraEngineerAgent.md  InfraOperationalArchitectAgent.md  IntegrationTestAgent.md  LiveOpsDeputyAgent.md  LiveOrderingDeputyAgent.md  (+16 more)
archive/: CHANGELOG-legacy.md
config/: .env.example  backtest.yaml  base.yaml  collector.yaml
deploy/: install.sh  mctrader-collector.service  (+1 more)
examples/rust-cli-minimal/: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md
examples/rust-cli-minimal/.claude/_overlay/: CLAUDE.md  project.yaml
examples/rust-cli-minimal/.claude/_overlay/agents/: DeveloperAgent.md  DomainAgent.md
examples/rust-cli-minimal/src/: main.rs
(+2649 files in other folders)
