[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mctrader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "certifi>=2024.0",
    "pyarrow>=14.0",
    "duckdb>=0.10.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
mctrader-collector = "mctrader.cli.collector_main:main"
mctrader-backtest = "mctrader.cli.backtest_main:main"
mctrader-dashboard = "mctrader.cli.dashboard_main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mctrader"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/mctrader/app/result_recorder.py" = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "benchmark: performance regression tests (tests/perf/**)",
]

[tool.pytest-benchmark]
storage = "file://./tests/perf/baselines"
save-data = true
compare-fail = ["mean:10%"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.parquet", "yaml"]
ignore_missing_imports = true
